Rewrite methods, results and discussion

--- a/article/CoMixNL_paper.tex
+++ b/article/CoMixNL_paper.tex
@@ -32,7 +32,7 @@ We categorized the number of unique contacted persons reported per participant p
 %https://en.wikipedia.org/wiki/COVID-19_pandemic_by_country_and_territory#Timeline_of_first_confirmed_cases_by_country_or_territory
 From early 2020 onwards, COVID-19 grew into a global pandemic within a few months affecting nearly all countries worldwide. SARS-CoV-2 virus that causes COVID-19 is transmitted between persons during contact events with physical proximity. Reducing transmission with non-pharmaceutical measures can be achieved by lowering the transmission probability per contact, e.g. by maintaining a safe distance from each other or using protective equipment such as a face mask, and by reducing the number of contacts per person, e.g. by closing schools, theaters and restaurants, teleworking or inviting fewer people at home.
 
-In the Netherlands, the first nation-wide lockdown was imposed on March 15th, 2020 involving all of the above measures. It was lifted stepwise on May 11th (opening of schools), June 1st (outside bars and restaurants open a.o.) and July 1st (inside bars and restaurants open a.o.). The rise of the Alpha variant in winter 2020/2021 called for an even stricter lockdown including an evening curfew, that was relaxed from March 23rd, 2021 onwards while vaccination coverages were increasing. It is not known how the change in control measures affected the number of at-risk contacts in the Dutch general population.
+In the Netherlands, the first nation-wide lockdown was imposed on March 15th, 2020 involving all of the above measures. It was lifted stepwise on May 11th (partly opening of schools), June 2nd (further opening of schools, museums and terraces open a.o.) and July 6th (bars and restaurants open a.o.). The rise of the Alpha variant in winter 2020/2021 called for an even stricter lockdown including an evening curfew, that was relaxed from April 28th, 2021 onwards while vaccination coverages were increasing. It is not known how the change in control measures affected the number of at-risk contacts in the Dutch general population.
 
 To learn about the effect of control measures on contact behaviour, many countries set up contact surveys \cite{Zhang_2020, Latsuzbaia_2020, Quaife_2020, Backer_2021, Bosetti_2021, Feehan_2021, Tomori_2021, Drolet_2022}. The POLYMOD study \cite{Mossong_2008} served as a blueprint for these as it did for many pre-COVID-19 studies \cite{Hoang_2019}. But while these pre-COVID-19 studies aimed to measure `normal' contact behaviour, the unprecedented measures that were taken during the pandemic gave a unique opportunity to determine contact behaviour under restricted conditions. As part of a European project, the CoMix survey was set up in April 2020 in Belgium, the UK, and the Netherlands, later followed by 19 other European countries \cite{Verelst_2021}. In this contact study, participants were asked to regularly report their contact behaviour, i.e. the number of unique persons they had contact with in certain locations per day, as well as some characteristics of the contacted persons such as age and sex. Participants were asked to report only at-risk contacts that could have led to an infection, specifically face-to-face conversational contacts and/or physical contacts. What sets the CoMix survey apart from other contact surveys is that it uses a standardised questionnaire in multiple countries and is repeated at regular intervals.
 
@@ -45,7 +45,9 @@ Our aim is to describe how control measures affected the contact behaviour of th
 
 \subsection*{CoMix participant recruitment and survey design in the Netherlands}
 
-This contact survey was part of the CoMix study that was conducted in several EU countries and the UK \cite{Verelst_2021}. Participants were recruited by the market research company Ipsos-MORI, and filled out the contact survey online. The study was carried out in two survey periods: 8 survey rounds from 16 April to 5 August 2020, referred to as the 2020 series, and 20 survey rounds from 23 December 2020 to 22 September 2021, referred to as the 2021 series. At the start of the 2020 series, 1500 participants of 18 years and older were recruited, reflecting the age distribution of the Dutch population. An overall drop-out rate of 10\% per round was allowed, but these rates differed per age group leading to very few participants in the youngest age group of 18-24 in the last rounds of the 2020 series (Fig \ref{fig:part}). For this reason, the younger age groups were oversampled at the start of the 2021 series with 1200 participants of 18 years and older. In addition, 300 children between 0 and 17 years of age were included by asking adult participants to fill out the contact survey for one of their children. After 10 rounds, the age cohorts were supplemented to include 1500 participants in total again in May 2021.
+This contact survey was part of the CoMix study that was conducted in several EU countries and the UK \cite{Verelst_2021}. Participants were recruited by the market research company Ipsos-MORI, and filled out the contact survey online. The study was carried out in two survey periods: 8 survey rounds from 16 April to 5 August 2020, referred to as the 2020 series, and 20 survey rounds from 23 December 2020 to 22 September 2021, referred to as the 2021 series. At the start of the 2020 series, 1500 participants of 18 years and older were recruited, reflecting the age distribution of the Dutch population. An overall drop-out rate of 10\% per round was allowed, but these rates differed per age group leading to very few participants in the youngest age group of 18-24 in the last rounds of the 2020 series (Fig \ref{fig:part}). For this reason, a preferential sampling scheme was adopted at the start of the 2021 series, oversampling the younger age groups. In total 1200 participants of 18 years and older included and additionally 300 children between 0 and 17 years of age were included by asking adult participants to fill out the contact survey for one of their children. After 10 rounds, the age cohorts were supplemented to include 1500 participants in total again in May 2021.
+
+distributed over different age groups according to the Dutch population over 18 years of age in the 2020 series, and according to a preferential sampling scheme in the 2021 series
 
 The contact survey was repeated every two weeks and a survey round lasted at most 7 days, except for the survey rounds where many new participants were recruited that were allowed more time to fill out the questionnaire. In each survey round participants were asked about characteristics that can change over time, such as risk perception, risk status and vaccination status against COVID-19. High risk participants were people with chronic respiratory disease, chronic heart disorder, chronic kidney disease, diabetes, reduced resistance to infection (due to illness or medication), morbid obesity (BMI over 40), and pregnant women, i.e. reflecting the medical indication for influenza vaccination. Missing data in the risk status were completed with the most common risk status reported over the survey rounds by the participant. The risk status of participants can change by survey round. The fraction of high risk participants is calculated per age group using only the participants with unambiguous risk status, and compared to the population fraction with a medical indication for influenza vaccination \cite{Nivel_2021}. 
 
@@ -75,36 +77,34 @@ All analyses are performed in R version 4.1.3 \cite{R_2022} using the \textit{mg
 
 \subsection*{Study population}
 
-In total, 1659 participants were included in the 2020 series, and 2514 participants in the 2021 series. Participants were equally distributed over men and women in 2020, while female participants were slightly overrepresented in 2021. Household sizes of 2 persons were most common (Tab. \ref{tab:part}). Each series started with a target population of 1500 participants, distributed over different age groups according to the Dutch population over 18 years of age in the 2020 series, and according to a preferential sampling scheme in the 2021 series (Tab \ref{tab:part_round}, Fig \ref{fig:part_round}). The number of participants declined after recruitment. In 2020 the drop-out rate was on average 4\% per round in the oldest age group and 14\% in the youngest age group; in 2021 drop out rates were more comparable for all age groups (Fig. \ref{fig:part}A).
+In total, 1659 participants were included in the 2020 series, and 2514 participants in the 2021 series. Participants were equally distributed over men and women in 2020, while female participants were slightly overrepresented in 2021. Household sizes of 2 persons were most common (Tab. \ref{tab:part}). Each series started with a target population of 1500 participants, and the number of participants declined in each survey round (Tab \ref{tab:part_round}, Fig \ref{fig:part_round}). In 2020 the drop-out rate was on average 4\% per round in the oldest age group and 14\% in the youngest age group; in 2021 drop out rates were more comparable for all age groups (Fig. \ref{fig:part}A).
 
-%The 2021 series coincided with the roll-out of the COVID-19 vaccination campaign. Health care workers, persons with a high medical risk and care home residents were vaccinated with priority, while the non-risk groups were vaccinated from elderly to young. Most persons were vaccinated with either BionTech/Pfizer, Moderna or Janssen vaccine by the Municipal Health Services, except for 60-64 year olds who were vaccinated at an early stage with AstraZeneca by their general practitioner. 
-
-The fraction of high risk adult participants is higher than in the general population, especially in the 2020 series (Fig. \ref{fig:part}B). The vaccination coverage of the study population increases over time largely in agreement with the general population (Fig. \ref{fig:part}C). The participants in the age groups of 18-34 years achieve a higher vaccination coverage at an earlier stage than the general population. The participants in the age group of 65 years and older lag behind the general population. 
+The fraction of high risk adult participants is higher than in the general population, especially in the 2020 series (Fig. \ref{fig:part}B). The vaccination coverage of the study population increases over time largely in agreement with the general population (Fig. \ref{fig:part}C). The participants in the age groups of 18-34 years achieve a higher vaccination coverage at an earlier stage than the general population. The participants in the age group of 65 years and older lag behind the general population.
 
 
 \subsection*{Contact behaviour}
 
-The distribution of the number of contacts is plotted on a loglog scale, showing that the adult and elderly age groups in both series exhibit powerlaw-like behaviour (Fig. \ref{fig:powerlaw}). Powerlaw coefficients for these four groups range from 1.1 to 1.5, indicating that the mean is defined but the variance is not. This confirms the choice to estimate activity levels, rather than a parametric distribution.
+The distribution of the number of contacts reveals that the adult and elderly age groups in both series exhibit heavy tails (Fig. \ref{fig:powerlaw}). Exponents for these four groups range from 1.1 to 1.5, indicating that the estimates of the sample mean are stable but the estimates of the sample variance are not. The numbers of contacts per participant per round are categorized in activity levels of 0, 1, 2, 3-4, 5-9, $\geq$ 10 contacts per participant per round.
 
-Five separate analyses are carried out for the different series and age group combinations. Of the fixed effects only the weekends significantly reduces the activity levels in all analyses (Tab. \ref{tab:fixed_effects}). Activity levels in general increase over time during the two study periods, indicating that the underlying number of contacts increases (Fig. \ref{fig:splines}). In all analyses the activity levels decrease with participant round. This means that participants tend to report fewer contacts the more often they participate. This is especially the case for the first few rounds, after which the effect stabilises. For age within the age group, no clear trend is observed.
+Separate analyses are carried out for the different series and age groups. Of the fixed effects only the weekends significantly reduces the activity levels in all analyses (Tab. \ref{tab:fixed_effects}). Activity levels increase over time during the two series, indicating that the underlying number of non-household contacts per participant increases (Fig. \ref{fig:splines}), corresponding to the lifting of COVID-19 control measures. In all analyses the activity levels decrease with participant round. This means that participants tend to report fewer contacts the more often they participate. This is especially the case for the first few rounds, after which the effect stabilises.
 
-The deviance explained by this model ranges from 14\% to 21\% (Tab. \ref{tab:fixed_effects}). Using these model results the activity levels are predicted for the study population and compared to the data (Fig. \ref{fig:studypop}). With the exception of some rounds, notably the first round in 2020 and the fourth round in 2021, the predicted activity levels agree well with the observed activity levels.
+The deviance explained by this model ranges from 14\% to 21\% (Tab. \ref{tab:fixed_effects}). Using these model results the fitted activity levels in the study population are compared to the data (Fig. \ref{fig:studypop}). With the exception of some rounds, notably the first round in 2020 and the fourth round in 2021, the fitted activity levels agree well with the observed activity levels.
 
-Next, the model results are applied to the general population over the full course of the study period (Fig. \ref{fig:genpop}). The saw-tooth pattern is caused by the weekend effect, which is largest for the 0-17 age group. Over time activity levels increase in all age groups in both series, indicated by the decrease of the predicted lines in Fig. \ref{fig:genpop}. As a comparison, the results of the representative PiCo study \cite{Backer_2021} are plotted, of which rounds 1, 2, 4 and 5 fell within the CoMix study periods. Participants of the PiCo study reported higher activity levels than CoMix participants. The discrepancy is largest for the 0-17 age group, whereas the 65+ age group all but agrees with the PiCo study results.
+Next, the model results are extrapolated to the general population over the full course of the study periods (Fig. \ref{fig:genpop}). The saw-tooth pattern is caused by the weekend effect, which is largest for the 0-17 age group. Over time activity levels increase in all age groups in both series, indicated by the decrease of the predicted lines in Fig. \ref{fig:genpop}. As a comparison, the results of the PiCo study \cite{Backer_2021} are plotted, of which rounds 1, 2, 4 and 5 fell within the CoMix study periods. Participants of the PiCo study reported higher activity levels than CoMix participants. The discrepancy is largest for the 0-17 age group, whereas the 65+ age group all but agrees with the PiCo study results.
 
 
 
 \section*{Discussion}
 
-In this paper we analysed the Dutch data of the European CoMix survey to describe contact behaviour in the general population during two study periods. Activity levels increased over the course of each study period corresponding to the lifting of measures. %In 2020, the lockdown that was imposed on March 16th, was lifted stepwise on May 11th (opening of schools), June 1st (outside bars and restaurants open a.o.) and July 1st (inside bars and restaurants open a.o.). The 2021 study period started with an even stricter lockdown including an evening curfew, that was relaxed from March 23rd onwards while vaccination coverages were increasing.
+In this paper we showed how the number of at-risk contacts per person outside the household increased as the COVID-19 control measures were lifted in the Netherlands, based on the Dutch data of the European CoMix survey.
 
-The independent contact surveys of the PiCo studies show a similar increasing trend in activity levels in the general population as our results, but the activity levels reported in PiCo are higher than in the CoMix data. The two studies differed in how the participants report their contacts. In the CoMix study contacts were reported individually with a lot of detail on location, duration, distance from contact, protection measures, etc. Also for the group contacts at work, school, or other places additional details were requested. In the PiCo study a participant reported the total number of contacts in specific age classes, which made reporting many contacts less cumbersome. This may partly explain the higher activity levels found in the PiCo study.
+The independent contact surveys of the PiCo studies show a similar increasing trend in activity levels in the general population as our results, but the activity levels reported in the PiCo data are higher than in the CoMix data. The two studies differed in how the participants report their contacts. In the CoMix study contacts were reported individually with a lot of detail on location, duration, distance from contact, protection measures, etc. Also for the group contacts at work, school, or other places additional details were requested. In the PiCo study a participant reported the total number of contacts in specific age classes, which made reporting many contacts easier. This may partly explain the higher activity levels found in the PiCo study.
 
-A counterintuitive observation in the 2021 series, is that while restrictions were lifted the study population reported fewer contacts. This is caused by the strong fatigue effect where participants tend to report fewer contacts when they participate in more rounds. This fatigue effect is also seen in the CoMix data of other countries, but the fatigue effect in the Netherlands is found to be extreme compared to these \cite{Wong_2022b}. A complicating factor in interpreting the fatigue effect is that the participant rounds are not equally distributed over the study period. Most participants have their first round in survey round 1 in 2020, and survey rounds 1 and 11 in 2021, due to the study design. In an alternative design as was used in the UK, the study population is supplemented to reach the target size in every survey round, which leads to a better distibution of the participant rounds over the survey rounds \cite{Gimma_2022}. Another possible adjustment to the study design is to decrease the frequency of the survey rounds, which may lead to a smaller fatigue effect.
+Participants tend to report fewer contacts when they participate in more rounds. This fatigue effect is also seen in the CoMix data of other countries, but the fatigue effect in the Netherlands is found to be extreme compared to these \cite{Wong_2022b}. A complicating factor in interpreting the fatigue effect is that the participant rounds are not equally distributed over the study period. Most participants have their first round in survey round 1 in 2020, and survey rounds 1 and 11 in 2021, due to the study design. In an alternative design as was used in the UK, the study population is supplemented to reach the target size in every survey round, which leads to a better distibution of the participant rounds over the survey rounds \cite{Gimma_2022}. Another possible adjustment to the study design is to decrease the frequency of the survey rounds, which may lead to a smaller fatigue effect.
 
-In order to say anything about the general population, the fatigue effect needed to be corrected for, and differences between the study population and the general population had to be taken into account. Particularly the age distribution of the study participants varied over the survey rounds, because drop-out rates differed between age groups. Also vaccination and risk status of the participants did not always reflect the vaccination and risk status in the general population. The participants in the age groups of 18-34 years achieved a higher vaccination coverage at an earlier stage than the general population. This could indicate that these groups contained relatively many health care workers, who were vaccinated with priority and may have a higher willingness to get vaccinated. The participants in the age group of 65 years and older lagged behind the general population, because the study population probably did not contain many care home residents who were vaccinated with priority. The fraction of high risk adult participants was higher than in the general population. The risk status was reported by participants themselves and compared to the fraction of the population that is invited for the annual influenza vaccination. Although the high risk definition is the same for both populations, participants may have assessed their risk status differently than their GP would. This is supported by the finding that the high risk participants are mainly overrepresented in 2020 (Tab. \ref{tab:part}) when risks may have been perceived to be higher than in 2021. This would explain the discrepancy, but it can not be excluded that they were really high risk participants. 
+In order to say anything about the general population, the fatigue effect needed to be corrected for, and differences between the study population and the general population had to be taken into account. Particularly the age distribution of the study participants varied over the survey rounds, because drop-out rates differed between age groups. Also vaccination and risk status of the participants did not always reflect the vaccination and risk status in the general population. The participants in the age groups of 18-34 years achieved a higher vaccination coverage at an earlier stage than the general population. This could indicate that these groups contained relatively many health care workers, who were vaccinated with priority and may have a higher willingness to get vaccinated. The participants in the age group of 65 years and older lagged behind the general population, because the study population probably did not contain many care home residents who were vaccinated with priority. The fraction of high risk adult participants was higher than in the general population. The risk status was reported by participants themselves and compared to the fraction of the population that is invited for the annual influenza vaccination. Although the high risk definition is the same for both populations, participants may have assessed their risk status differently than their GP would. This is supported by the finding that the high risk participants are mainly overrepresented in 2020 (Fig. \ref{fig:part}B, Tab. \ref{tab:part}) when risks may have been perceived to be higher than in 2021. This would explain the discrepancy, but it can not be excluded that they were really high risk participants. 
 
-Our analysis showed that contact data collected in the CoMix survey can be used to describe trends in contact behaviour in the general population. As such it can be useful in tracking the effect of control measures that are aimed at contact reduction \cite{Coletti_2020, Jarvis_2021, Gimma_2022}, and serve as input for infectious disease models \cite{Coletti_2021, Munday_2021, Franco_2022}. Moreover, the data contains many additional details which facilitates in-depth analyses, such as the effect of risk perception \cite{Wambua_2022} and pregnancy \cite{Wong_2022a}. These results can help guide policy in future waves of COVID-19 or other emerging respiratory diseases and emphasize that contact surveys such as the CoMix study are indispensable for providing a quantitative basis to public health policy.
+Our findings suggest that the contact data collected in the CoMix survey describe trends in contact behaviour in the general population. As such it can be useful in monitoring the effect of control measures that are aimed at contact reduction \cite{Coletti_2020, Jarvis_2021, Gimma_2022}, describe determinants for contact behaviour \cite{Wambua_2022, Wong_2022a}, or serve as input for infectious disease models \cite{Coletti_2021, Munday_2021, Franco_2022}. These results can help guide policy in future waves of COVID-19 or other emerging respiratory diseases and emphasize that contact surveys such as the CoMix study are indispensable for providing a quantitative basis to public health policy.
 
 
 %Other limitations?
@@ -119,9 +119,7 @@ Our analysis showed that contact data collected in the CoMix survey can be used 
 
 \section*{Acknowledgements}
 
-The authors would like to thank all participants of the CoMix survey. This project has received funding from the European Union’s Horizon 2020 research and innovation programme - project EpiPose (grant agreement number 101003688).
-
-ook Netherlands Ministry of Health, Welfare and Sport noemen?
+The authors would like to thank all participants of the CoMix survey. This project has received funding from the European Union’s Horizon 2020 research and innovation programme - project EpiPose (grant agreement number 101003688). The study was financed by the Netherlands Ministry of Health, Welfare and Sport.
 
 \section*{Author contributions statement}
 
@@ -131,8 +129,7 @@ J.B. managed the data collection, L.B. curated the data, J.B. and L.B. analysed 
 
 \textbf{Competing interests} The authors declare no competing interests.
 
-\noindent \textbf{Ethics statement} ?
-
+\noindent \textbf{Ethics statement} This study involves human participants. The research protocol was shared with the Medical Ethics Review Committee Utrecht, and an official waiver for ethical approval was obtained, which stated that ethical assessment was unnecessary given the non-invasive nature of data collection. Participants gave informed consent to participate in the study before taking part.
 
 \clearpage
 
@@ -194,7 +191,7 @@ J.B. managed the data collection, L.B. curated the data, J.B. and L.B. analysed 
   \hline
   \hline
 \end{tabular}
-\caption{\label{tab:part}Number of participants in the 2020 and 2021 series by participant characteristics.
+\caption{\label{tab:part}Participants in the CoMix survey in the Netherlands in 2020 and 2021.
  \protect\linebreak \textsuperscript{a} Characteristics for 2020 general population based on 18+ population to match study population.
  \protect\linebreak \textsuperscript{b} Percentage of risk status in study population only calculated for participants with unambiguous risk status to allow comparison with general population.
 \protect\linebreak \textsuperscript{c} Expected household size distribution per Dutch citizen, based on Dutch households consisting of one (38\%), two (33\%), three (12\%), four (12\%) and five or more (5\%) persons \cite{Backer_2021}}
@@ -215,8 +212,8 @@ J.B. managed the data collection, L.B. curated the data, J.B. and L.B. analysed 
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\linewidth]{../figures/powerlaw_contacts.png}
-\caption{Distribution of number of contacts per participant per round excluding household contacts, by series (line type) and age group (color), with complementary cumulative distribution function on y-axis.}
+\includegraphics[width=\linewidth]{../figures/distribution_contacts.png}
+\caption{Distribution of number of contacts per participant per round excluding household members, by series (line type) and age group (color), with complementary cumulative distribution function on y-axis. The inset shows the same plot on log-log scale.}
 \label{fig:powerlaw}
 \end{figure}
 
