--- a/article/references.bib
+++ b/article/references.bib
@@ -10,14 +10,6 @@
    doi = "http://dx.doi.org/10.2807/1560-7917.ES.2021.26.8.2000994"
 }
 
-@misc{Bogaardt_2022,
-  author = {Bogaardt, L. and Backer, J. A.},
-  title = {{C}o{M}ix social contact data ({T}he {N}etherlands)},
-  howpublished = "\url{http://zenodourl/}",
-  year = {2022}, 
-  note = "[Online; accessed 19 July 2022]"
-}
-
 
 @Article{Bosetti_2021,
    Author="Bosetti, P.  and Huynh, B. T.  and Abdou, A. Y.  and Sanchez, M.  and Eisenhauer, C.  and Courtejoie, N.  and Accardo, J.  and Salje, H.  and Guillemot, D.  and Moslonka-Lefebvre, M.  and Boëlle, P. Y.  and Béraud, G.  and Cauchemez, S.  and Opatowski, L. ",
@@ -114,6 +106,12 @@
    doi = "https://doi.org/10.1371/journal.pmed.1003907"
 }
 
+@misc{Github_RIVM,
+  author = {{RIVM}},
+  title = {{C}o{M}ix{N}{L}},
+  howpublished = "\url{https://github.com/rivm-syso/CoMixNL}",
+  year = {2022}
+}
 
 @Article{Hoang_2019,
    Author="Hoang, T.  and Coletti, P.  and Melegaro, A.  and Wallinga, J.  and Grijalva, C. G.  and Edmunds, J. W.  and Beutels, P.  and Hens, N. ",
@@ -161,20 +159,6 @@
    Pages="e0237128",
    doi = "http://dx.doi.org/10.1371/journal.pone.0237128"
 }
-
-@Article{Liljeros_2001,
-   Author="Liljeros, F.  and Edling, C. R.  and Amaral, L. A.  and Stanley, H. E.  and Aberg, Y. ",
-   Title="{{T}he web of human sexual contacts}",
-   Journal="Nature",
-   Year="2001",
-   Volume="411",
-   Number="6840",
-   Pages="907--908",
-   Month="Jun",
-   doi = "http://dx.doi.org/10.1038/35082140"
-}
-
-
 
 @Article{Mossong_2008,
   Author="Mossong, J.  and Hens, N.  and Jit, M.  and Beutels, P.  and Auranen, K.  and Mikolajczyk, R.  and Massari, M.  and Salmaso, S.  and Tomba, G. S.  and Wallinga, J.  and Heijne, J.  and Sadkowska-Todys, M.  and Rosinska, M.  and Edmunds, W. J. ",
@@ -352,7 +336,14 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
   publisher = {Chapman and Hall/CRC},
 }
 
-
+@misc{Zenodo_2022,
+  author = {Backer, J. A. and Bogaardt, L. and Wallinga, J.},
+  title = {{C}o{M}ix social contact data ({N}etherlands)},
+  howpublished = "\url{http://zenodo.org/record/4790347\#.YwTvc3ZByUm/}",
+  year = {2022}, 
+  note = "[Online; accessed 19 July 2022]",
+  doi = "https://dx.doi.org/10.5281/zenodo.4790347"
+}
 
 @Article{Zhang_2020,
    Author="Zhang, J.  and Litvinova, M.  and Liang, Y.  and Wang, Y.  and Wang, W.  and Zhao, S.  and Wu, Q.  and Merler, S.  and Viboud, C.  and Vespignani, A.  and Ajelli, M.  and Yu, H. ",
