--- a/article/CoMixNL_paper.tex
+++ b/article/CoMixNL_paper.tex
@@ -6,10 +6,23 @@
 
 \author[1,*]{Jantien A. Backer}
 \author[1]{Laurens Bogaardt}
-\author[?]{more authors}
-\author[1,2]{Jacco Wallinga}
+\author[2]{Philippe Beutels}
+\author[3]{Pietro Coletti}
+\author[4]{John Edmunds}
+\author[4]{Amy Gimma}
+\author[1]{Cheyenne van Hagen}
+\author[3]{Niel Hens}
+\author[4]{Christopher I. Jarvis}
+\author[1]{Eric R. A. Vos}
+\author[3]{James Wambua}
+\author[1]{Denise Wong}
+\author[4]{Kevin van Zandvoort}
+\author[1,5]{Jacco Wallinga}
 \affil[1]{National Institute for Public Health and the Environment, Bilthoven, the Netherlands}
-\affil[2]{Leiden University Medical Center, Leiden, the Netherlands}
+\affil[2]{University of Antwerp, Antwerp, Belgium}
+\affil[3]{UHasselt, Data Science Institute and I-BioStat, Hasselt, Belgium}
+\affil[4]{London School of Hygiene and Tropical Medicine, London, United Kingdom}
+\affil[5]{Leiden University Medical Center, Leiden, the Netherlands}
 
 \affil[*]{jantien.backer@rivm.nl}
 
@@ -34,7 +47,7 @@ From early 2020 onwards, COVID-19 grew into a global pandemic within a few month
 
 In the Netherlands, the first nation-wide lockdown was imposed on March 15th, 2020 involving all of the above measures. It was lifted stepwise on May 11th (partly opening of schools), June 2nd (further opening of schools, museums and terraces open a.o.) and July 6th (bars and restaurants open a.o.). The rise of the Alpha variant in winter 2020/2021 called for an even stricter lockdown including an evening curfew, that was relaxed from April 28th, 2021 onwards while vaccination coverages were increasing. It is not known how the change in control measures affected the number of at-risk contacts in the Dutch general population.
 
-To learn about the effect of control measures on contact behaviour, many countries set up contact surveys \cite{Zhang_2020, Latsuzbaia_2020, Quaife_2020, Backer_2021, Bosetti_2021, Feehan_2021, Tomori_2021, Drolet_2022}. The POLYMOD study \cite{Mossong_2008} served as a blueprint for these as it did for many pre-COVID-19 studies \cite{Hoang_2019}. But while these pre-COVID-19 studies aimed to measure `normal' contact behaviour, the unprecedented measures that were taken during the pandemic gave a unique opportunity to determine contact behaviour under restricted conditions. As part of a European project, the CoMix survey was set up in April 2020 in Belgium, the UK, and the Netherlands, later followed by 19 other European countries \cite{Verelst_2021}. In this contact study, participants were asked to regularly report their contact behaviour, i.e. the number of unique persons they had contact with in certain locations per day, as well as some characteristics of the contacted persons such as age and sex. Participants were asked to report only at-risk contacts that could have led to an infection, specifically face-to-face conversational contacts and/or physical contacts. What sets the CoMix survey apart from other contact surveys is that it uses a standardised questionnaire in multiple countries and is repeated at regular intervals.
+To learn about the effect of control measures on contact behaviour, many countries set up contact surveys \cite{Zhang_2020, Latsuzbaia_2020, Quaife_2020, Backer_2021, Bosetti_2021, Feehan_2021, Tomori_2021, Drolet_2022}. The POLYMOD study \cite{Mossong_2008} served as a blueprint for these as it did for many pre-COVID-19 studies \cite{Hoang_2019}. But while these pre-COVID-19 studies aimed to measure `normal' contact behaviour, the unprecedented measures that were taken during the pandemic gave a unique opportunity to determine contact behaviour under restricted conditions. As part of a European project, the CoMix survey was set up in April 2020 in Belgium, the UK, and the Netherlands, later followed by 19 other European countries \cite{Verelst_2021}. In this contact study, participants were asked to regularly report their contact behaviour, i.e. the number of unique persons they had contact with in certain locations per day, as well as some characteristics of the contacted persons such as age and sex. Participants were asked to report only contacts that could have led to an infection, specifically face-to-face conversational contacts and/or physical contacts. What sets the CoMix survey apart from other contact surveys is that it uses a standardised questionnaire in multiple countries and is repeated at regular intervals.
 
 At the same time the CoMix survey started, a large-scale survey on SARS-CoV-2 serology was initiated in the Netherlands \cite{Vos_2021}. This Pienter Corona (PiCo) study was repeated every 4 to 6 months in a representative sample of the Dutch population involving a few thousand participants per survey round, and is still ongoing. It also included a contact question where the participants were asked to report the number of unique persons they contacted the day before in specific age groups. An early analysis of the first two survey rounds in 2020 showed that the first lockdown decreased the number of community contacts per participant on average by 76\% compared to pre-COVID behaviour \cite{Backer_2021}. The PiCo survey rounds are however too far apart to closely monitor the contact behaviour in time.
 
@@ -47,9 +60,7 @@ Our aim is to describe how control measures affected the contact behaviour of th
 
 This contact survey was part of the CoMix study that was conducted in several EU countries and the UK \cite{Verelst_2021}. Participants were recruited by the market research company Ipsos-MORI, and filled out the contact survey online. The study was carried out in two survey periods: 8 survey rounds from 16 April to 5 August 2020, referred to as the 2020 series, and 20 survey rounds from 23 December 2020 to 22 September 2021, referred to as the 2021 series. At the start of the 2020 series, 1500 participants of 18 years and older were recruited, reflecting the age distribution of the Dutch population. An overall drop-out rate of 10\% per round was allowed, but these rates differed per age group leading to very few participants in the youngest age group of 18-24 in the last rounds of the 2020 series (Fig \ref{fig:part}). For this reason, a preferential sampling scheme was adopted at the start of the 2021 series, oversampling the younger age groups. In total 1200 participants of 18 years and older included and additionally 300 children between 0 and 17 years of age were included by asking adult participants to fill out the contact survey for one of their children. After 10 rounds, the age cohorts were supplemented to include 1500 participants in total again in May 2021.
 
-distributed over different age groups according to the Dutch population over 18 years of age in the 2020 series, and according to a preferential sampling scheme in the 2021 series
-
-The contact survey was repeated every two weeks and a survey round lasted at most 7 days, except for the survey rounds where many new participants were recruited that were allowed more time to fill out the questionnaire. In each survey round participants were asked about characteristics that can change over time, such as risk perception, risk status and vaccination status against COVID-19. High risk participants were people with chronic respiratory disease, chronic heart disorder, chronic kidney disease, diabetes, reduced resistance to infection (due to illness or medication), morbid obesity (BMI over 40), and pregnant women, i.e. reflecting the medical indication for influenza vaccination. Missing data in the risk status were completed with the most common risk status reported over the survey rounds by the participant. The risk status of participants can change by survey round. The fraction of high risk participants is calculated per age group using only the participants with unambiguous risk status, and compared to the population fraction with a medical indication for influenza vaccination \cite{Nivel_2021}. 
+The contact survey was repeated every two weeks and a survey round lasted at most 7 days, except for the survey rounds where many new participants were recruited that were allowed more time to fill out the questionnaire. In each survey round participants were asked about characteristics that can change over time, such as risk perception, risk status and vaccination status against COVID-19. High risk participants were people with self-reported chronic respiratory disease, chronic heart disorder, chronic kidney disease, diabetes, reduced resistance to infection (due to illness or medication), morbid obesity (BMI over 40), and pregnant women, i.e. reflecting the medical indication for influenza vaccination. Missing data in the risk status of a participant were completed with the most common risk status reported over the survey rounds by the participant. The risk status of participants can change by survey round. The fraction of high risk participants is calculated per age group using only the participants with unambiguous risk status, and compared to the population fraction with a medical indication for influenza vaccination \cite{Nivel_2021}. 
 
 The 2021 series coincided with the roll-out of the COVID-19 vaccination campaign. Health care workers, persons with a high medical risk and care home residents were vaccinated with priority, while the non-risk groups were vaccinated from elderly to young. Most persons were vaccinated with either BionTech/Pfizer, Moderna or Janssen vaccine by the Municipal Health Services, except for 60-64 year olds who were vaccinated at an early stage with AstraZeneca by their general practitioner. Participants are considered to be vaccinated after they have reported to have had at least one vaccination dose. The fraction of vaccinated participants is compared to the vaccination coverage of one vaccine dose in the general population over time \cite{RIVM_2022}. 
 
@@ -84,13 +95,13 @@ The fraction of high risk adult participants is higher than in the general popul
 
 \subsection*{Contact behaviour}
 
-The distribution of the number of contacts reveals that the adult and elderly age groups in both series exhibit heavy tails (Fig. \ref{fig:powerlaw}). Exponents for these four groups range from 1.1 to 1.5, indicating that the estimates of the sample mean are stable but the estimates of the sample variance are not. The numbers of contacts per participant per round are categorized in activity levels of 0, 1, 2, 3-4, 5-9, $\geq$ 10 contacts per participant per round.
+The distribution of the number of contacts reveals that the adult and elderly age groups in both series exhibit heavy tails (Fig. \ref{fig:powerlaw}). Exponents for these four groups range from 1.1 to 1.5, indicating that the estimates of the sample mean are stable but the estimates of the sample variance are not. The number of contacts in the child age group lacks a heavy tail, because of the abundance of children reporting contact numbers in the range of a class size. The numbers of contacts per participant per round are categorized in activity levels of 0, 1, 2, 3-4, 5-9, $\geq$ 10 contacts per participant per round.
 
-Separate analyses are carried out for the different series and age groups. Of the fixed effects only the weekends significantly reduces the activity levels in all analyses (Tab. \ref{tab:fixed_effects}). Activity levels increase over time during the two series, indicating that the underlying number of non-household contacts per participant increases (Fig. \ref{fig:splines}), corresponding to the lifting of COVID-19 control measures. In all analyses the activity levels decrease with participant round. This means that participants tend to report fewer contacts the more often they participate. This is especially the case for the first few rounds, after which the effect stabilises.
+Separate analyses are carried out for the different series and age groups. Of the fixed effects only the weekends significantly reduces the activity levels in all analyses (Tab. \ref{tab:fixed_effects}). For the youngest age group, also holidays significantly reduce the activity levels as they also include school holidays. Activity levels increase over time during the two series, indicating that the underlying number of non-household contacts per participant increases (Fig. \ref{fig:splines}), corresponding to the lifting of COVID-19 control measures. In all analyses the activity levels decrease with participant round. This means that participants tend to report fewer contacts the more often they participate. This is especially the case for the first few rounds, after which the effect stabilises.
 
-The deviance explained by this model ranges from 14\% to 21\% (Tab. \ref{tab:fixed_effects}). Using these model results the fitted activity levels in the study population are compared to the data (Fig. \ref{fig:studypop}). With the exception of some rounds, notably the first round in 2020 and the fourth round in 2021, the fitted activity levels agree well with the observed activity levels.
+The deviance explained by this model ranges from 14\% to 19\% (Tab. \ref{tab:fixed_effects}). Using these model results the fitted activity levels in the study population are compared to the data (Fig. \ref{fig:studypop}). With the exception of some rounds, notably the first round in 2020 and the fourth round in 2021, the fitted activity levels agree well with the observed activity levels.
 
-Next, the model results are extrapolated to the general population over the full course of the study periods (Fig. \ref{fig:genpop}). The saw-tooth pattern is caused by the weekend effect, which is largest for the 0-17 age group. Over time activity levels increase in all age groups in both series, indicated by the decrease of the predicted lines in Fig. \ref{fig:genpop}. As a comparison, the results of the PiCo study \cite{Backer_2021} are plotted, of which rounds 1, 2, 4 and 5 fell within the CoMix study periods. Participants of the PiCo study reported higher activity levels than CoMix participants. The discrepancy is largest for the 0-17 age group, whereas the 65+ age group all but agrees with the PiCo study results.
+Next, the model results are extrapolated to the general population over the full course of the study periods (Fig. \ref{fig:genpop}). The saw-tooth pattern is caused by the weekend effect, which is largest for the 0-17 age group. Over time activity levels generally increase in all age groups in both series (Fig. \ref{fig:genpop}). As a comparison, the results of the PiCo study \cite{Backer_2021} are plotted, of which rounds 1, 2, 4 and 5 fell within the CoMix study periods. Participants of the PiCo study reported higher activity levels than CoMix participants. The discrepancy is largest for the 0-17 age group, whereas the 65+ age group all but agrees with the PiCo study results.
 
 
 
@@ -102,7 +113,7 @@ The independent contact surveys of the PiCo studies show a similar increasing tr
 
 Participants tend to report fewer contacts when they participate in more rounds. This fatigue effect is also seen in the CoMix data of other countries, but the fatigue effect in the Netherlands is found to be extreme compared to these \cite{Wong_2022b}. A complicating factor in interpreting the fatigue effect is that the participant rounds are not equally distributed over the study period. Most participants have their first round in survey round 1 in 2020, and survey rounds 1 and 11 in 2021, due to the study design. In an alternative design as was used in the UK, the study population is supplemented to reach the target size in every survey round, which leads to a better distibution of the participant rounds over the survey rounds \cite{Gimma_2022}. Another possible adjustment to the study design is to decrease the frequency of the survey rounds, which may lead to a smaller fatigue effect.
 
-In order to say anything about the general population, the fatigue effect needed to be corrected for, and differences between the study population and the general population had to be taken into account. Particularly the age distribution of the study participants varied over the survey rounds, because drop-out rates differed between age groups. Also vaccination and risk status of the participants did not always reflect the vaccination and risk status in the general population. The participants in the age groups of 18-34 years achieved a higher vaccination coverage at an earlier stage than the general population. This could indicate that these groups contained relatively many health care workers, who were vaccinated with priority and may have a higher willingness to get vaccinated. The participants in the age group of 65 years and older lagged behind the general population, because the study population probably did not contain many care home residents who were vaccinated with priority. The fraction of high risk adult participants was higher than in the general population. The risk status was reported by participants themselves and compared to the fraction of the population that is invited for the annual influenza vaccination. Although the high risk definition is the same for both populations, participants may have assessed their risk status differently than their GP would. This is supported by the finding that the high risk participants are mainly overrepresented in 2020 (Fig. \ref{fig:part}B, Tab. \ref{tab:part}) when risks may have been perceived to be higher than in 2021. This would explain the discrepancy, but it can not be excluded that they were really high risk participants. 
+In order to say anything about the general population, the fatigue effect needed to be corrected for, and differences between the study population and the general population had to be taken into account. Particularly the age distribution of the study participants varied over the survey rounds, because drop-out rates differed between age groups. Also vaccination and risk status of the participants did not always reflect the vaccination and risk status in the general population. The participants in the age groups of 18-34 years achieved a higher vaccination coverage at an earlier stage than the general population. This could indicate that these groups contained relatively many health care workers, who were vaccinated with priority and may have a higher willingness to get vaccinated. The participants in the age group of 65 years and older lagged behind the general population, because the study population probably did not contain many care home residents who were vaccinated with priority. The fraction of high risk adult participants was higher than in the general population. The risk status was reported by participants themselves and compared to the fraction of the population that is invited for the annual influenza vaccination. Although the high risk definition is the same for both populations, participants may have assessed their risk status differently than their GP would. This is supported by the finding that the high risk participants are mainly overrepresented in the highest age groups in 2020 (Fig. \ref{fig:part}B, Tab. \ref{tab:part}) when risks may have been perceived to be higher than in 2021 when mass-vaccination against COVID-19 was implemented. This would explain the discrepancy, but it cannot be excluded that they were really high risk participants. 
 
 Our findings suggest that the contact data collected in the CoMix survey describe trends in contact behaviour in the general population. As such it can be useful in monitoring the effect of control measures that are aimed at contact reduction \cite{Coletti_2020, Jarvis_2021, Gimma_2022}, describe determinants for contact behaviour \cite{Wambua_2022, Wong_2022a}, or serve as input for infectious disease models \cite{Coletti_2021, Munday_2021, Franco_2022}. These results can help guide policy in future waves of COVID-19 or other emerging respiratory diseases and emphasize that contact surveys such as the CoMix study are indispensable for providing a quantitative basis to public health policy.
 
@@ -119,17 +130,18 @@ Our findings suggest that the contact data collected in the CoMix survey describ
 
 \section*{Acknowledgements}
 
-The authors would like to thank all participants of the CoMix survey. This project has received funding from the European Union’s Horizon 2020 research and innovation programme - project EpiPose (grant agreement number 101003688). The study was financed by the Netherlands Ministry of Health, Welfare and Sport.
+The authors would like to thank all participants of the CoMix survey. The CoMix study in the Netherlands was made possible through funding from the European Union's Horizon 2020 research and innovation programme - project EpiPose (Grant agreement number 101003688). This work reflects only the authors’ view. The European Commission is not responsible for any use that may be made of the information it contains. We are grateful to the EpiPose management team for coordinating the CoMix survey so data collection was made possible in the Netherlands. 
+
 
 \section*{Author contributions statement}
 
-J.B. managed the data collection, L.B. curated the data, J.B. and L.B. analysed the data, [more authors?], J.W. set up the study. All authors reviewed the manuscript. 
+P.B, J.E., N.H. and J.W. initiated the study; N.H., P.B., C.J., K.v.Z., J.E. designed the survey questionnaire; A.G., C.J., K.v.Z, P.C, J.W., L.B. collected and cleaned the data; J.B. and L.B. analysed the data; J.B. wrote the manuscript; E.V, C.v.H and D.W. collected and cleaned the PiCo data. All authors reviewed the manuscript and approved the final version for publication. 
 
 \section*{Additional information}
 
 \textbf{Competing interests} The authors declare no competing interests.
 
-\noindent \textbf{Ethics statement} This study involves human participants. The research protocol was shared with the Medical Ethics Review Committee Utrecht, and an official waiver for ethical approval was obtained, which stated that ethical assessment was unnecessary given the non-invasive nature of data collection. Participants gave informed consent to participate in the study before taking part.
+\noindent \textbf{Ethics statement} This study involves human participants. The research protocol was shared with the Medical Ethics Review Committee Utrecht to confirm that ethical assessment was unnecessary given the non-invasive nature of data collection. Participants gave informed consent to participate in the study before taking part.
 
 \clearpage
 
@@ -301,48 +313,50 @@ year & round & 0-11 & 12-17 & 18-24 & 25-34 & 35-44 & 45-54 & 55-64 & 65+ & tota
 
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrlrrrr}
+\begin{tabular}{rrlrrrrl}
   \hline
-series & age\_group & Variable & Estimate & Std. Error & t value & Pr($>$$|$t$|$) \\ 
+series & age\_group & Variable & Estimate & Std. Error & t value & p-value & \\ 
   \hline
-2020 & 18-64 & (Intercept) & -0.24 & 0.06 & -4.15 & 0.00 \\ 
-  2020 & 18-64 & part\_vaccTRUE & 0.00 & 0.00 &  &  \\ 
-  2020 & 18-64 & part\_elevated\_riskTRUE & -0.03 & 0.08 & -0.38 & 0.70 \\ 
-  2020 & 18-64 & weekendTRUE & -0.21 & 0.06 & -3.65 & 0.00 \\ 
-  2020 & 18-64 & holidayTRUE & 0.07 & 0.10 & 0.69 & 0.49 \\ 
-  2020 & 18-64 & Deviance explained & 0.16 &  &  &  \\ 
+  2020 & 18-64 & (Intercept) & -0.23 & 0.06 & -3.85 & $<$ 0.001 & *** \\ 
+  2020 & 18-64 & part\_vaccTRUE & 0.00 & 0.00 &  &  &  \\ 
+  2020 & 18-64 & part\_elevated\_riskTRUE & -0.03 & 0.08 & -0.40 & 0.69 &  \\ 
+  2020 & 18-64 & weekendTRUE & -0.21 & 0.06 & -3.67 & $<$ 0.001 & *** \\ 
+  2020 & 18-64 & holidayTRUE & 0.07 & 0.10 & 0.72 & 0.47 &  \\ 
+  2020 & 18-64 & Deviance explained & 0.16 &  &  &  &  \\ 
   \hline
-  2020 & 65+ & (Intercept) & 0.03 & 0.13 & 0.27 & 0.79 \\ 
-  2020 & 65+ & part\_vaccTRUE & 0.00 & 0.00 &  &  \\ 
-  2020 & 65+ & part\_elevated\_riskTRUE & 0.25 & 0.12 & 2.05 & 0.04 \\ 
-  2020 & 65+ & weekendTRUE & -0.32 & 0.08 & -3.89 & 0.00 \\ 
-  2020 & 65+ & holidayTRUE & -0.08 & 0.11 & -0.70 & 0.48 \\ 
-  2020 & 65+ & Deviance explained & 0.14 &  &  &  \\ 
+  2020 & 65+ & (Intercept) & 0.03 & 0.13 & 0.27 & 0.79 &  \\ 
+  2020 & 65+ & part\_vaccTRUE & 0.00 & 0.00 &  &  &  \\ 
+  2020 & 65+ & part\_elevated\_riskTRUE & 0.25 & 0.12 & 2.05 & 0.04 & * \\ 
+  2020 & 65+ & weekendTRUE & -0.32 & 0.08 & -3.89 & $<$ 0.001 & *** \\ 
+  2020 & 65+ & holidayTRUE & -0.08 & 0.11 & -0.70 & 0.48 &  \\ 
+  2020 & 65+ & Deviance explained & 0.14 &  &  &  &  \\ 
   \hline
-  2021 & 0-17 & (Intercept) & -0.82 & 0.08 & -10.02 & 0.00 \\ 
-  2021 & 0-17 & part\_vaccTRUE & 0.12 & 0.19 & 0.63 & 0.53 \\ 
-  2021 & 0-17 & part\_elevated\_riskTRUE & -0.14 & 0.28 & -0.52 & 0.60 \\ 
-  2021 & 0-17 & weekendTRUE & -0.67 & 0.08 & -8.35 & 0.00 \\ 
-  2021 & 0-17 & holidayTRUE & -0.20 & 0.10 & -2.02 & 0.04 \\ 
-  2021 & 0-17 & Deviance explained & 0.17 &  &  &  \\ 
+  2021 & 0-17 & (Intercept) & -0.81 & 0.08 & -9.91 & $<$ 0.001 & *** \\ 
+  2021 & 0-17 & part\_vaccTRUE & 0.12 & 0.19 & 0.64 & 0.52 &  \\ 
+  2021 & 0-17 & part\_elevated\_riskTRUE & -0.15 & 0.27 & -0.56 & 0.57 &  \\ 
+  2021 & 0-17 & weekendTRUE & -0.67 & 0.08 & -8.35 & $<$ 0.001 & *** \\ 
+  2021 & 0-17 & holidayTRUE & -0.20 & 0.10 & -2.04 & 0.04 & * \\ 
+  2021 & 0-17 & Deviance explained & 0.17 &  &  &  &  \\ 
   \hline
-  2021 & 18-64 & (Intercept) & -1.04 & 0.06 & -17.68 & 0.00 \\ 
-  2021 & 18-64 & part\_vaccTRUE & 0.09 & 0.07 & 1.24 & 0.22 \\ 
-  2021 & 18-64 & part\_elevated\_riskTRUE & -0.09 & 0.08 & -1.20 & 0.23 \\ 
-  2021 & 18-64 & weekendTRUE & -0.27 & 0.05 & -5.95 & 0.00 \\ 
-  2021 & 18-64 & holidayTRUE & 0.06 & 0.06 & 0.94 & 0.35 \\ 
-  2021 & 18-64 & Deviance explained & 0.21 &  &  &  \\ 
-  \hline 
-  2021 & 65+ & (Intercept) & -0.86 & 0.15 & -5.74 & 0.00 \\ 
-  2021 & 65+ & part\_vaccTRUE & 0.07 & 0.19 & 0.38 & 0.70 \\ 
-  2021 & 65+ & part\_elevated\_riskTRUE & -0.09 & 0.11 & -0.81 & 0.42 \\ 
-  2021 & 65+ & weekendTRUE & -0.45 & 0.08 & -5.69 & 0.00 \\ 
-  2021 & 65+ & holidayTRUE & 0.04 & 0.10 & 0.40 & 0.69 \\ 
-  2021 & 65+ & Deviance explained & 0.16 &  &  &  \\ 
+  2021 & 18-64 & (Intercept) & -0.92 & 0.06 & -16.00 & $<$ 0.001 & *** \\ 
+  2021 & 18-64 & part\_vaccTRUE & 0.09 & 0.07 & 1.31 & 0.19 &  \\ 
+  2021 & 18-64 & part\_elevated\_riskTRUE & -0.13 & 0.08 & -1.72 & 0.08 & . \\ 
+  2021 & 18-64 & weekendTRUE & -0.27 & 0.05 & -5.88 & $<$ 0.001 & *** \\ 
+  2021 & 18-64 & holidayTRUE & 0.06 & 0.06 & 0.94 & 0.35 &  \\ 
+  2021 & 18-64 & Deviance explained & 0.19 &  &  &  &  \\ 
+  \hline
+  2021 & 65+ & (Intercept) & -0.82 & 0.15 & -5.51 & $<$ 0.001 & *** \\ 
+  2021 & 65+ & part\_vaccTRUE & 0.08 & 0.19 & 0.40 & 0.69 &  \\ 
+  2021 & 65+ & part\_elevated\_riskTRUE & -0.10 & 0.11 & -0.89 & 0.37 &  \\ 
+  2021 & 65+ & weekendTRUE & -0.44 & 0.08 & -5.65 & $<$ 0.001 & *** \\ 
+  2021 & 65+ & holidayTRUE & 0.04 & 0.10 & 0.42 & 0.68 &  \\ 
+  2021 & 65+ & Deviance explained & 0.16 &  &  &  &  \\ 
    \hline
 \end{tabular}
-\caption{\label{tab:fixed_effects}Results for fixed effects of generalised additive model, by series (2020, 2021) and age group (0-17, 16-64, 65+). Included fixed effects are participant vaccination status (part\_vacc), participant risk status (part\_elevated\_risk), weekend and holiday. Holidays include general holidays and school holidays. The last row of each section refers to the explained deviance. } 
+\caption{\label{tab:fixed_effects}Results for fixed effects of generalised additive model, by series (2020, 2021) and age group (0-17, 16-64, 65+). Included fixed effects are participant vaccination status (part\_vacc), participant risk status (part\_elevated\_risk), weekend and holiday. Holidays include general holidays and school holidays. The last row of each section refers to the explained deviance.
+Significance levels: *** (p-value $<$ 0.001), ** (p-value $<$ 0.01), * (p-value $<$ 0.05), . (p-value $<$ 0.1) } 
 \end{table}
+
 
 \begin{figure}[ht]
 \centering
