Process comments of co-authors

--- a/article/references.bib
+++ b/article/references.bib
@@ -275,6 +275,15 @@ url="https://doi.org/10.1007/978-3-319-15916-4_1"
    doi = "http://dx.doi.org/10.1186/s12916-021-02133-y"
 }
 
+@Article{Vos_2020,
+   Author="Vos, E. R. A.  and den Hartog, G.  and Schepp, R. M.  and Kaaijk, P.  and van Vliet, J.  and Helm, K.  and Smits, G.  and Wijmenga-Monsuur, A.  and Verberk, J. D. M.  and van Boven, M.  and van Binnendijk, R. S.  and de Melker, H. E.  and Mollema, L.  and van der Klis, F. R. M. ",
+   Title="{{N}ationwide seroprevalence of {S}{A}{R}{S}-{C}o{V}-2 and identification of risk factors in the general population of the {N}etherlands during the first epidemic wave}",
+   Journal="J Epidemiol Community Health",
+   Year="2020",
+   Month="Nov",
+      doi = "http://dx.doi.org/10.1136/jech-2020-215678"
+}
+
 @Article{Vos_2021,
    Author="Vos, E. R. A.  and van Boven, M.  and den Hartog, G.  and Backer, J. A.  and Klinkenberg, D.  and van Hagen, C. C. E.  and Boshuizen, H.  and van Binnendijk, R. S.  and Mollema, L.  and van der Klis, F. R. M.  and de Melker, H. E. ",
    Title="{{A}ssociations {B}etween {M}easures of {S}ocial {D}istancing and {S}evere {A}cute {R}espiratory {S}yndrome {C}oronavirus 2 {S}eropositivity: {A} {N}ationwide {P}opulation-based {S}tudy in the {N}etherlands}",
