--- a/article/CoMixNL_paper.tex
+++ b/article/CoMixNL_paper.tex
@@ -8,9 +8,9 @@
 \author[1]{Laurens Bogaardt}
 \author[2]{Philippe Beutels}
 \author[3]{Pietro Coletti}
-\author[4]{John Edmunds}
+\author[4]{W. John Edmunds}
 \author[4]{Amy Gimma}
-\author[1]{Cheyenne van Hagen}
+\author[1]{Cheyenne C. E. van Hagen}
 \author[3]{Niel Hens}
 \author[4]{Christopher I. Jarvis}
 \author[1]{Eric R. A. Vos}
@@ -29,9 +29,9 @@
 \keywords{COVID-19, SARS-CoV-2 virus, contact survey, control measures}
 
 \begin{abstract}
-The COVID-19 pandemic in 2020 and 2021 was for a large part mitigated by reducing contacts in the general population. To monitor how these contacts changed over the course of the pandemic in the Netherlands, a survey was conducted where participants reported every two weeks on their at-risk contacts, as part of the European CoMix survey. The survey included 1659 participants from April to August 2020 and 2514 participants from December 2020 to September 2021.
+The COVID-19 pandemic was in 2020 and 2021 for a large part mitigated by reducing contacts in the general population. To monitor how these contacts changed over the course of the pandemic in the Netherlands, a longitudinal survey was conducted where participants reported on their at-risk contacts every two weeks, as part of the European CoMix survey. The survey included 1659 participants from April to August 2020 and 2514 participants from December 2020 to September 2021.
 
-We categorized the number of unique contacted persons excluding household members, reported per participant per day into six activity levels, \textit{viz} 0, 1, 2, 3-4, 5-9 and 10 or more reported contacts. After correcting for age, vaccination status, risk status for severe outcome of infection, and duration of participation, activity levels increased over time, coinciding with relaxation of COVID-19 control measures.
+We categorized the number of unique contacted persons excluding household members, reported per participant per day into six activity levels, defined as 0, 1, 2, 3-4, 5-9 and 10 or more reported contacts. After correcting for age, vaccination status, risk status for severe outcome of infection, and frequency of participation, activity levels increased over time, coinciding with relaxation of COVID-19 control measures.
 
 \end{abstract}
 \begin{document}
@@ -43,35 +43,35 @@ We categorized the number of unique contacted persons excluding household member
 
 \section*{Introduction}
 %https://en.wikipedia.org/wiki/COVID-19_pandemic_by_country_and_territory#Timeline_of_first_confirmed_cases_by_country_or_territory
-From early 2020 onwards, COVID-19 grew into a global pandemic within a few months affecting nearly all countries worldwide. SARS-CoV-2 virus that causes COVID-19 is transmitted between persons during contact events with physical proximity. Reducing transmission with non-pharmaceutical measures can be achieved by lowering the transmission probability per contact, e.g. by maintaining a safe distance from each other or using protective equipment such as a face mask, and by reducing the number of contacts per person, e.g. by closing schools, theaters and restaurants, teleworking or inviting fewer people at home.
+From early 2020 onwards, the COVID-19 outbreak grew into a global pandemic, taking only a few months to affect nearly all countries worldwide. SARS-CoV-2 virus that causes COVID-19 is transmitted between persons during contact events with physical proximity, i.e. at-risk contacts. Reducing transmission with non-pharmaceutical measures can be achieved by lowering the transmission probability per contact, e.g. by maintaining a safe distance from each other or using protective equipment such as a face mask, and by reducing the number of contacts per person, e.g. by closing schools, theaters and restaurants, teleworking or inviting fewer people at home.
 
-In the Netherlands, the first nation-wide lockdown was imposed on March 15th, 2020 involving all of the above measures. It was lifted stepwise on May 11th (partly opening of schools), June 2nd (further opening of schools, museums and terraces open a.o.) and July 6th (bars and restaurants open a.o.). The rise of the Alpha variant in winter 2020/2021 called for an even stricter lockdown including an evening curfew, that was relaxed from April 28th, 2021 onwards while vaccination coverages were increasing. It is not known how the change in control measures affected the number of at-risk contacts in the Dutch general population.
+In the Netherlands, the first nation-wide lockdown was imposed on March 15th, 2020 involving all of the above measures. It was lifted stepwise on May 11th (partly opening of schools), June 2nd (further opening of schools, museums and terraces open a.o.) and July 6th (bars and restaurants open a.o.). The rise of the Alpha variant in winter 2020/2021 called for an even stricter lockdown including an evening curfew. The measures were relaxed from April 28th, 2021 onwards as vaccination coverages were increasing. It is not known how the change in control measures affected the number of at-risk contacts in the Dutch general population.
 
-To learn about the effect of control measures on contact behaviour, many countries set up contact surveys \cite{Zhang_2020, Latsuzbaia_2020, Quaife_2020, Backer_2021, Bosetti_2021, Feehan_2021, Tomori_2021, Drolet_2022}. The POLYMOD study \cite{Mossong_2008} served as a blueprint for these as it did for many pre-COVID-19 studies \cite{Hoang_2019}. But while these pre-COVID-19 studies aimed to measure `normal' contact behaviour, the unprecedented measures that were taken during the pandemic gave a unique opportunity to determine contact behaviour under restricted conditions. As part of a European project, the CoMix survey was set up in April 2020 in Belgium, the UK, and the Netherlands, later followed by 19 other European countries \cite{Verelst_2021}. In this contact study, participants were asked to regularly report their contact behaviour, i.e. the number of unique persons they had contact with in certain locations per day, as well as some characteristics of the contacted persons such as age and sex. Participants were asked to report only contacts that could have led to an infection, specifically face-to-face conversational contacts and/or physical contacts. What sets the CoMix survey apart from other contact surveys is that it uses a standardised questionnaire in multiple countries and is repeated at regular intervals.
+To learn about the effect of control measures on contact behaviour, many countries set up contact surveys \cite{Zhang_2020, Latsuzbaia_2020, Quaife_2020, Backer_2021, Bosetti_2021, Feehan_2021, Tomori_2021, Drolet_2022}. The POLYMOD study \cite{Mossong_2008} served as a blueprint for these as it did for many pre-COVID-19 studies \cite{Hoang_2019}. But while these pre-COVID-19 studies aimed to measure `normal' contact behaviour, the unprecedented measures that were taken during the pandemic gave a unique opportunity to determine contact behaviour under restricted conditions. As part of a European project, the CoMix contact survey was set up in March/April 2020 in Belgium, the UK, and the Netherlands, later followed by 19 other European countries \cite{Verelst_2021}. In this contact study, participants were asked to regularly report their contact behaviour, i.e. the number of unique persons they had contact with in certain locations on the day preceding the survey day, as well as some characteristics of the contacted persons such as age and sex. Participants were asked to report only at-risk contacts, specifically face-to-face conversational contacts (within 1.5 meters) and/or physical contacts. What sets the CoMix survey apart from other contact surveys is that it uses a standardised questionnaire in multiple countries and is repeated at regular intervals in the same participants.
 
-At the same time the CoMix survey started, a large-scale survey on SARS-CoV-2 serology was initiated in the Netherlands \cite{Vos_2021}. This Pienter Corona (PiCo) study was repeated every 4 to 6 months in a representative sample of the Dutch population involving a few thousand participants per survey round, and is still ongoing. It also included a contact question where the participants were asked to report the number of unique persons they contacted the day before in specific age groups. An early analysis of the first two survey rounds in 2020 showed that the first lockdown decreased the number of community contacts per participant on average by 76\% compared to pre-COVID behaviour \cite{Backer_2021}. The PiCo survey rounds are however too far apart to closely monitor the contact behaviour in time.
+At the same time the CoMix survey started, a large-scale population-based SARS-CoV-2 serosurveillance study was initiated in the Netherlands \cite{Vos_2020, Vos_2021}. This Pienter Corona (PiCo) study was repeated every 4 to 6 months in a representative sample of the Dutch population involving a few thousand participants of all ages per survey round, and is still ongoing. It also included a contact question where the participants were asked to report the number of unique persons they contacted the day before in specific age groups. An early analysis of the first two survey rounds in 2020 showed that the first lockdown decreased the number of community contacts per participant on average by 76\% compared to pre-COVID behaviour \cite{Backer_2021}. The PiCo survey rounds are too far apart to closely monitor the contact behaviour over time, but will be used to validate the CoMix survey results at certain points in time.
 
-Our aim is to describe how control measures affected the contact behaviour of the Dutch general population, using the CoMix data that was collected in the Netherlands during the survey periods in 2020 and 2021. We will focus on the number of contacts per participant outside the household because contacts with household members are not subject to control measures. As a validation, the results are compared to four survey rounds of the PiCo survey that coincided with the CoMix study periods.
+Our aim is to describe how control measures affected the contact behaviour of the Dutch general population, using the CoMix data that was collected in the Netherlands during the survey periods in 2020 and 2021. Although contacts with household members are thought to be more intensive than contacts with non-household members, they are not subject to any of the control measures. For this reason, we will focus on the number of contacts per participant outside the household because these can be affected by the control measures. As a validation, the results are compared to four survey rounds of the PiCo survey that coincided with the CoMix study periods.
 
 
 \section*{Methods}
 
 \subsection*{CoMix participant recruitment and survey design in the Netherlands}
 
-This contact survey was part of the CoMix study that was conducted in several EU countries and the UK \cite{Verelst_2021}. Participants were recruited by the market research company Ipsos-MORI, and filled out the contact survey online. The study was carried out in two survey periods: 8 survey rounds from 16 April to 5 August 2020, referred to as the 2020 series, and 20 survey rounds from 23 December 2020 to 22 September 2021, referred to as the 2021 series. At the start of the 2020 series, 1500 participants of 18 years and older were recruited, reflecting the age distribution of the Dutch population. An overall drop-out rate of 10\% per round was allowed, but these rates differed per age group leading to very few participants in the youngest age group of 18-24 in the last rounds of the 2020 series (Fig \ref{fig:part}). For this reason, a preferential sampling scheme was adopted at the start of the 2021 series, oversampling the younger age groups. In total 1200 participants of 18 years and older included and additionally 300 children between 0 and 17 years of age were included by asking adult participants to fill out the contact survey for one of their children. After 10 rounds, the age cohorts were supplemented to include 1500 participants in total again in May 2021.
+This contact survey was part of the CoMix study that was conducted in several EU countries and the UK \cite{Verelst_2021}. Participants were recruited by the market research company Ipsos-MORI, and filled out the contact survey online. The study was carried out in two survey periods: 8 survey rounds from 16 April to 5 August 2020, referred to as the 2020 series, and 20 survey rounds from 23 December 2020 to 22 September 2021, referred to as the 2021 series. At the start of the 2020 series, 1500 participants of 18 years and older were recruited, reflecting the age distribution of the Dutch population. An overall drop-out rate of 10\% per round was allowed, otherwise additional participants were recruited for the following rounds. However, the drop-out rates differed per age group leading to very few participants in the youngest age group of 18-24 in the last rounds of the 2020 series (Fig \ref{fig:part}). For this reason, a preferential sampling scheme was adopted at the start of the 2021 series, oversampling the younger age groups. In total 1200 participants of 18 years and older were included and additionally 300 children between 0 and 17 years of age were included by asking adult participants to fill out the contact survey for one of their children. After 10 rounds, the age cohorts were supplemented to include 1500 participants in total again in May 2021.
 
-The contact survey was repeated every two weeks and a survey round lasted at most 7 days, except for the survey rounds where many new participants were recruited that were allowed more time to fill out the questionnaire. In each survey round participants were asked about characteristics that can change over time, such as risk perception, risk status and vaccination status against COVID-19. High risk participants were people with self-reported chronic respiratory disease, chronic heart disorder, chronic kidney disease, diabetes, reduced resistance to infection (due to illness or medication), morbid obesity (BMI over 40), and pregnant women, i.e. reflecting the medical indication for influenza vaccination. Missing data in the risk status of a participant were completed with the most common risk status reported over the survey rounds by the participant. The risk status of participants can change by survey round. The fraction of high risk participants is calculated per age group using only the participants with unambiguous risk status, and compared to the population fraction with a medical indication for influenza vaccination \cite{Nivel_2021}. 
+The contact survey was repeated every two weeks and a survey round lasted at most 7 days, except for the survey rounds where many new participants were recruited that were allowed more time to fill out the questionnaire. In each survey round participants were asked about characteristics that can change over time, such as risk perception, risk status and - in the 2021 series - vaccination status against COVID-19. High risk participants were people with self-reported chronic respiratory disease, chronic heart disorder, chronic kidney disease, diabetes, reduced resistance to infection (due to illness or medication), morbid obesity (BMI over 40), and pregnant women, i.e. reflecting the medical indication for influenza vaccination. Missing data in the risk status of a participant were completed with the most common risk status reported over the survey rounds by the participant. The risk status of participants could change by survey round. The fraction of high risk participants is calculated per age group using only the participants with unambiguous risk status, and compared to the population fraction with a medical indication for influenza vaccination \cite{Nivel_2021}. 
 
-The 2021 series coincided with the roll-out of the COVID-19 vaccination campaign. Health care workers, persons with a high medical risk and care home residents were vaccinated with priority, while the non-risk groups were vaccinated from elderly to young. Most persons were vaccinated with either BionTech/Pfizer, Moderna or Janssen vaccine by the Municipal Health Services, except for 60-64 year olds who were vaccinated at an early stage with AstraZeneca by their general practitioner. Participants are considered to be vaccinated after they have reported to have had at least one vaccination dose. The fraction of vaccinated participants is compared to the vaccination coverage of one vaccine dose in the general population over time \cite{RIVM_2022}. 
+The 2021 series coincided with the roll-out of the COVID-19 vaccination campaign. Health care workers, persons with a high medical risk and care home residents were vaccinated with priority, while the non-risk groups were vaccinated from elderly to young. Most persons were vaccinated with either BionTech/Pfizer, Moderna or to a smaller extent Janssen vaccine by the Municipal Health Services, except for 60-64 year olds who were vaccinated at an early stage with AstraZeneca by their general practitioner. Participants are considered to be vaccinated after they have reported to have had at least one vaccination dose. The fraction of vaccinated participants is compared to the vaccination coverage of one vaccine dose in the general population over time \cite{RIVM_2022}. 
 
-In the main part of the survey, participants reported their contact behaviour of the previous day. For each unique person they had conversational or physical contact with between 5am on the previous day until 5am of the survey day, participants filled out the characteristics of the contacted person, such as age group and gender, as well as duration and location of the contact event. Multiple contact events with the same person were to be considered as one contact, and only contact events with a close physical proximity were to be reported, i.e. excluding online or phone contacts. Besides these individual contacts, it was also possible to report group contacts from the third survey round onwards in late May 2020. Group contacts were reported as the total number of contacted persons in broad age groups (0-17, 18-64, 65+) at work, school or another location. More details on the CoMix study and questionnaire can be found in previous publications \cite{Jarvis_2020, Verelst_2021, Gimma_2022}.
+In the main part of the survey, participants reported their contact behaviour of the previous day. For each unique person they had conversational or physical contact with between 5am on the previous day and 5am of the survey day, participants filled out the characteristics of the contacted person, such as age group and gender, as well as duration and location of the contact event. Multiple contact events with the same person were to be considered as one contact, and only contact events with a close physical proximity were to be reported, i.e. excluding online or phone contacts. Besides these individual contacts, it was also possible to report group contacts from the third survey round onwards in late May 2020. Group contacts were reported as the total number of contacted persons in broad age groups (0-17, 18-64, 65+) at work, school or another location. More details on the CoMix study and questionnaire can be found in previous publications \cite{Jarvis_2020, Verelst_2021, Gimma_2022}.
 
 
 \subsection*{Analysis of number of contacts}
 
-The participants are stratified into three age groups (0-17, 18-64, 65+) and two series (2020, 2021). Only contacts with non-household members are included, as these are most likely to change over the course of the study period. Twelve occasions were excluded where participants reported more than 1000 contacts in a single survey round, and 58 participants were excluded that participated in four or more rounds but did not report any contact.
+The participants are stratified into three age groups (0-17, 18-64, 65+) and two series (2020, 2021). Only contacts with non-household members are included, as these are most likely to change over the course of the study period. Twelve occasions were excluded where participants reported more than 1000 contacts in a single survey round, and 58 participants were excluded that participated in four or more rounds but did not report any contact. These excluded participants did not have a significantly different age than the included participants, but they did have a significantly smaller household size.
 
-The distribution of the number of contacts per participant per round had a heavy tail, which can result in unstable estimates of the variance \cite{Tagore_2015}. Instead of using a parametric distribution, we define activity levels of 0, 1, 2, 3-4, 5-9, $\geq$ 10 contacts per participant per round and analyse these using ordinal regression. The activity levels are used as variables of a generalised additive model with fixed effects for participant vaccination status, participant risk status, weekends and (school)holidays, cubic splines for calendar time, participant age, participant round (i.e. the n\textsuperscript{th} time a participant participated), and a random intercept for each participant. The statistic model can be described as:
+The distribution of the number of contacts per participant per round had a heavy tail, which can result in unstable estimates of the variance \cite{Tagore_2015}. Instead of using a parametric distribution, we define activity levels of 0, 1, 2, 3-4, 5-9, $\geq$ 10 contacts per participant per round and analyse these using ordinal regression. The activity levels are used as variables of a generalised additive model with fixed effects for participant vaccination status, participant risk status, weekends and (school) holidays, cubic splines for calendar time, participant age, participant round (i.e. the n\textsuperscript{th} time a participant participated), and a random intercept for each participant. The statistical model can be described as:
 
 \begin{align*}
 Pr(\mathrm{activity} \leq l) = \: \Phi[ & \theta_l - (\beta_\mathrm{id} + \beta_0 + \beta_1 * s(\mathrm{date}) + \beta_2 * s(\mathrm{part\_round}) + \beta_3 * s(\mathrm{part\_age}) + \\
@@ -88,14 +88,14 @@ All analyses are performed in R version 4.1.3 \cite{R_2022} using the \textit{mg
 
 \subsection*{Study population}
 
-In total, 1659 participants were included in the 2020 series, and 2514 participants in the 2021 series. Participants were equally distributed over men and women in 2020, while female participants were slightly overrepresented in 2021. Household sizes of 2 persons were most common (Tab. \ref{tab:part}). Each series started with a target population of 1500 participants, and the number of participants declined in each survey round (Tab \ref{tab:part_round}, Fig \ref{fig:part_round}). In 2020 the drop-out rate was on average 4\% per round in the oldest age group and 14\% in the youngest age group; in 2021 drop out rates were more comparable for all age groups (Fig. \ref{fig:part}A).
+In total, 1659 participants were included in the 2020 series, and 2514 participants in the 2021 series. Participants were equally distributed over men and women in 2020, while female participants were slightly overrepresented in 2021 (Tab. \ref{tab:part}). Household sizes of 2 persons were most common (Tab. \ref{tab:part}). Each series started with a target population of 1500 participants, and the number of participants declined in each survey round (Tab \ref{tab:part_round}, Fig \ref{fig:part_round}). In 2020 the drop-out rate was on average 4\% per round in the oldest age group and 14\% in the youngest age group; in 2021 drop out rates were more comparable for all age groups (Fig. \ref{fig:part}A).
 
-The fraction of high risk adult participants is higher than in the general population, especially in the 2020 series (Fig. \ref{fig:part}B). The vaccination coverage of the study population increases over time largely in agreement with the general population (Fig. \ref{fig:part}C). The participants in the age groups of 18-34 years achieve a higher vaccination coverage at an earlier stage than the general population. The participants in the age group of 65 years and older lag behind the general population.
+The fraction of self-reported high risk adult participants was higher than in the general population, especially in the 2020 series (Fig. \ref{fig:part}B). The vaccination coverage of the study population increased over time largely in agreement with the general population (Fig. \ref{fig:part}C). The participants in the age groups of 18-34 years achieved a higher vaccination coverage at an earlier stage than the general population. The participants in the age group of 65 years and older lagged behind the general population.
 
 
 \subsection*{Contact behaviour}
 
-The distribution of the number of contacts reveals that the adult and elderly age groups in both series exhibit heavy tails (Fig. \ref{fig:powerlaw}). Exponents for these four groups range from 1.1 to 1.5, indicating that the estimates of the sample mean are stable but the estimates of the sample variance are not. The number of contacts in the child age group lacks a heavy tail, because of the abundance of children reporting contact numbers in the range of a class size. The numbers of contacts per participant per round are categorized in activity levels of 0, 1, 2, 3-4, 5-9, $\geq$ 10 contacts per participant per round.
+The distribution of the number of contacts reveals that the adult and elderly age groups in both series exhibit heavy tails (Fig. \ref{fig:powerlaw}). The fitted lines on log-log scale (inset in \ref{fig:powerlaw}) for these four groups have slopes ranging from -1.1 to -1.5. These values indicate that the estimates of the sample mean are stable but the estimates of the sample variance are not \cite{Tagore_2015}, which makes the choice to model the number of contacts with a parametric distribution less obvious. The number of contacts in the child age group lacks a heavy tail, because of the abundance of children reporting contact numbers in the range of a class size. The numbers of contacts per participant per round are categorized in activity levels of 0, 1, 2, 3-4, 5-9, $\geq$ 10 contacts per participant per round.
 
 Separate analyses are carried out for the different series and age groups. Of the fixed effects only the weekends significantly reduces the activity levels in all analyses (Tab. \ref{tab:fixed_effects}). For the youngest age group, also holidays significantly reduce the activity levels as they also include school holidays. Activity levels increase over time during the two series, indicating that the underlying number of non-household contacts per participant increases (Fig. \ref{fig:splines}), corresponding to the lifting of COVID-19 control measures. In all analyses the activity levels decrease with participant round. This means that participants tend to report fewer contacts the more often they participate. This is especially the case for the first few rounds, after which the effect stabilises.
 
@@ -109,21 +109,13 @@ Next, the model results are extrapolated to the general population over the full
 
 In this paper we showed how the number of at-risk contacts per person outside the household increased as the COVID-19 control measures were lifted in the Netherlands, based on the Dutch data of the European CoMix survey.
 
-The independent contact surveys of the PiCo studies show a similar increasing trend in activity levels in the general population as our results, but the activity levels reported in the PiCo data are higher than in the CoMix data. The two studies differed in how the participants report their contacts. In the CoMix study contacts were reported individually with a lot of detail on location, duration, distance from contact, protection measures, etc. Also for the group contacts at work, school, or other places additional details were requested. In the PiCo study a participant reported the total number of contacts in specific age classes, which made reporting many contacts easier. This may partly explain the higher activity levels found in the PiCo study.
+These findings are consistent with those found in the PiCo studies, even though the activity levels reported in the PiCo data are higher than in the CoMix data. The two studies differed in how the participants report their contacts. In the CoMix study contacts were reported individually with a lot of detail on location, duration, distance from contact, protection measures, etc. Also for the group contacts at work, school, or other places additional details were requested. In the PiCo study a participant reported the total number of contacts in specific age classes, which made reporting many contacts easier. This may partly explain the higher activity levels found in the PiCo study.
 
-Participants tend to report fewer contacts when they participate in more rounds. This fatigue effect is also seen in the CoMix data of other countries, but the fatigue effect in the Netherlands is found to be extreme compared to these \cite{Wong_2022b}. A complicating factor in interpreting the fatigue effect is that the participant rounds are not equally distributed over the study period. Most participants have their first round in survey round 1 in 2020, and survey rounds 1 and 11 in 2021, due to the study design. In an alternative design as was used in the UK, the study population is supplemented to reach the target size in every survey round, which leads to a better distibution of the participant rounds over the survey rounds \cite{Gimma_2022}. Another possible adjustment to the study design is to decrease the frequency of the survey rounds, which may lead to a smaller fatigue effect.
+Participants tend to report fewer contacts when they participate in more rounds. This fatigue effect is also seen in the CoMix data of other countries, but the fatigue effect in the Netherlands is found to be extreme compared to these \cite{Wong_2022b}. A complicating factor in interpreting the fatigue effect is that the participant rounds are not equally distributed over the study period. Most participants have their first participant round in survey round 1 in 2020, and survey rounds 1 and 11 in 2021, due to the study design. In an alternative design used in the UK, the study population is supplemented to reach the target size in every survey round, which leads to a better distibution of the participant rounds over the survey rounds \cite{Gimma_2022}. Also, a lower frequency of the survey rounds may lead to a smaller fatigue effect, but this would conflict with the aim of monitoring contact behaviour close to real time.
 
-In order to say anything about the general population, the fatigue effect needed to be corrected for, and differences between the study population and the general population had to be taken into account. Particularly the age distribution of the study participants varied over the survey rounds, because drop-out rates differed between age groups. Also vaccination and risk status of the participants did not always reflect the vaccination and risk status in the general population. The participants in the age groups of 18-34 years achieved a higher vaccination coverage at an earlier stage than the general population. This could indicate that these groups contained relatively many health care workers, who were vaccinated with priority and may have a higher willingness to get vaccinated. The participants in the age group of 65 years and older lagged behind the general population, because the study population probably did not contain many care home residents who were vaccinated with priority. The fraction of high risk adult participants was higher than in the general population. The risk status was reported by participants themselves and compared to the fraction of the population that is invited for the annual influenza vaccination. Although the high risk definition is the same for both populations, participants may have assessed their risk status differently than their GP would. This is supported by the finding that the high risk participants are mainly overrepresented in the highest age groups in 2020 (Fig. \ref{fig:part}B, Tab. \ref{tab:part}) when risks may have been perceived to be higher than in 2021 when mass-vaccination against COVID-19 was implemented. This would explain the discrepancy, but it cannot be excluded that they were really high risk participants. 
+To extrapolate our findings to the general population, the fatigue effect needed to be corrected for, and differences between the study population and the general population had to be taken into account. Particularly the age distribution of the study participants varied over the survey rounds, because drop-out rates differed between age groups. Also vaccination and risk status of the participants did not always reflect the vaccination and risk status in the general population. The participants in the age groups of 18-34 years achieved a higher vaccination coverage at an earlier stage than the general population. This could indicate that these groups contained relatively many health care workers, who were vaccinated with priority and may have a higher willingness to get vaccinated. The participants in the age group of 65 years and older lagged behind the general population, because the study population probably did not contain many care home residents who were vaccinated with priority. The fraction of high risk adult participants was higher than in the general population. The risk status was reported by participants themselves and compared to the fraction of the population that is invited for the annual influenza vaccination. Although the high risk definition is the same for both populations, participants may have assessed their risk status differently than their GP would. This is supported by the finding that the high risk participants are mainly overrepresented in the highest age groups in 2020 (Fig. \ref{fig:part}B, Tab. \ref{tab:part}) when risks may have been perceived to be higher than in 2021 when mass-vaccination against COVID-19 was implemented. This would explain the discrepancy, but it cannot be excluded that they were really high risk participants. 
 
-Our findings suggest that the contact data collected in the CoMix survey describe trends in contact behaviour in the general population. As such it can be useful in monitoring the effect of control measures that are aimed at contact reduction \cite{Coletti_2020, Jarvis_2021, Gimma_2022}, describe determinants for contact behaviour \cite{Wambua_2022, Wong_2022a}, or serve as input for infectious disease models \cite{Coletti_2021, Munday_2021, Franco_2022}. These results can help guide policy in future waves of COVID-19 or other emerging respiratory diseases and emphasize that contact surveys such as the CoMix study are indispensable for providing a quantitative basis to public health policy.
-
-
-%Other limitations?
-
-%ook nog contactmatrices erbij?
-
-%limitation: participants can choose which yesterday to fill out, bias to include easy days
-% sensitiviteit aantal categorieen
+Our findings suggest that the contact data collected in the CoMix survey describe trends in contact behaviour in the general population. As such it can be useful in monitoring the effect of control measures that are aimed at contact reduction \cite{Coletti_2020, Jarvis_2021, Gimma_2022}, describe determinants for contact behaviour \cite{Wambua_2022, Wong_2022a}, or serve as input for infectious disease models \cite{Coletti_2021, Munday_2021, Franco_2022}. These results can help guide policy in future waves of COVID-19 or other emerging respiratory diseases by monitoring the interaction between contact behaviour, control measures and complicance, and emphasize that contact surveys such as the CoMix study are indispensable for providing a quantitative basis to public health policy.
 
 
 \bibliography{references}
@@ -151,24 +143,24 @@ P.B, J.E., N.H. and J.W. initiated the study; N.H., P.B., C.J., K.v.Z., J.E. des
   \hline
   \hline
   2020 series & & n & \% & reference\textsuperscript{a} (\%) \\ 
-  total & & 1659 & & \\
+  Total & & 1659 & & \\
   \hline
-  age group & 18-24 & 84 & 5 & 11 \\ 
+  Age group & 18-24 & 84 & 5 & 11 \\ 
    & 25-34 & 236 & 14 & 16 \\ 
    & 35-44 & 257 & 15 & 15 \\ 
    & 45-54 & 337 & 20 & 18 \\ 
    & 55-64 & 312 & 19 & 17 \\ 
    & 65+ & 433 & 26 & 24 \\ 
   \hline
-  gender & Female & 814 & 49 & 51 \\ 
+  Gender & Female & 814 & 49 & 51 \\ 
    & Male & 845 & 51 & 49 \\ 
   \hline
-  high risk & mixed & 359 & \textsuperscript{b} &  \\ 
+  High risk & mixed & 359 & \textsuperscript{b} &  \\ 
    & no & 744 & 58 & 78 \\ 
    & yes & 540 & 42 & 22 \\ 
-   & NA & 16 & \textsuperscript{b} &  \\ 
+   & missing & 16 & \textsuperscript{b} &  \\ 
   \hline
-  household size & 1 & 409 & 25 & 17\textsuperscript{c} \\ 
+  Household size & 1 & 409 & 25 & 17\textsuperscript{c} \\ 
    & 2 & 716 & 43 & 31 \\ 
    & 3 & 241 & 15 & 17 \\ 
    & 4 & 203 & 12 & 23 \\ 
@@ -176,9 +168,9 @@ P.B, J.E., N.H. and J.W. initiated the study; N.H., P.B., C.J., K.v.Z., J.E. des
   \hline
   \hline
   2021 series & & n & \% & reference (\%) \\ 
-  total & & 2514 & & \\
+  Total & & 2514 & & \\
   \hline
-  age group & 0-11 & 240 & 10 & 12 \\ 
+  Age group & 0-11 & 240 & 10 & 12 \\ 
    & 12-17 & 290 & 12 & 7 \\ 
    & 18-24 & 511 & 20 & 9 \\ 
    & 25-34 & 378 & 15 & 13 \\ 
@@ -187,15 +179,15 @@ P.B, J.E., N.H. and J.W. initiated the study; N.H., P.B., C.J., K.v.Z., J.E. des
    & 55-64 & 230 & 9 & 14 \\ 
    & 65+ & 340 & 14 & 20 \\ 
   \hline
-  gender & Female & 1383 & 55 & 50 \\ 
+  Gender & Female & 1383 & 55 & 50 \\ 
    & Male & 1131 & 45 & 50 \\ 
   \hline
-  high risk & mixed & 385 & \textsuperscript{b} &  \\ 
+  High risk & mixed & 385 & \textsuperscript{b} &  \\ 
    & no & 1720 & 81 & 81 \\ 
    & yes & 400 & 19 & 19 \\ 
-   & NA & 9 & \textsuperscript{b} &  \\ 
+   & missing & 9 & \textsuperscript{b} &  \\ 
   \hline
-  household size & 1 & 573 & 23 & 17\textsuperscript{c} \\ 
+  Household size & 1 & 573 & 23 & 17\textsuperscript{c} \\ 
    & 2 & 766 & 30 & 31 \\ 
    & 3 & 444 & 18 & 17 \\ 
    & 4 & 496 & 20 & 23 \\ 
